--- a/client/views/index.html
+++ b/client/views/index.html
@@ -59,6 +59,22 @@
         </form>
       </div>
 
+      <div id="login_form">
+        <form action="/login" method="post">
+            <div>
+                <label>Username:</label>
+                <input class="form-control input-lg" type="text" name="username"/>
+            </div>
+            <div>
+                <label>Password:</label>
+                <input class="form-control input-lg" type="password" name="password"/>
+            </div>
+            <div>
+                &nbsp;</br><input class="btn btn-primary btn-lg" type="submit" value="Log In"/>
+            </div>
+        </form>
+      </div>
+
     </div>
     <script src="http://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js" type="text/javascript"></script>
