--- a/client/views/index.html
+++ b/client/views/index.html
@@ -36,6 +36,23 @@
     </style>
   </head>
   <body ng-controller="mainController">
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '1001237643242798',
+          xfbml      : true,
+          version    : 'v2.3'
+        });
+      };
+
+      (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "//connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
+    </script>
     <div class="container">
       
       <div class="header">
