--- a/client/views/index.html
+++ b/client/views/index.html
@@ -57,6 +57,12 @@
       
       <div class="header">
         <h1>ExpressChat</h1>
+        <div
+          class="fb-like"
+          data-share="true"
+          data-width="450"
+          data-show-faces="true">
+        </div>
         <hr>
         <h1 class="lead">Michael Swanson</h1>
       </div>
@@ -110,6 +116,8 @@
             &nbsp;</br><input class="btn btn-primary btn-lg" type="submit" value="Log In" ng-click="authenticateUser()"/>
         </div>
     </form>
+    <br/>
+    <input class="btn btn-primary btn-lg" type="submit" value="FB Log in" ng-click="fBAuthenticate()"/>
     </div>
     <script src="http://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js" type="text/javascript"></script>
