got validPassword to work... but still not right

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -57,14 +57,14 @@
       
       <div class="header">
         <h1>ExpressChat</h1>
-        <div
+        <!-- <div
           class="fb-like"
           data-share="true"
           data-width="450"
           data-show-faces="true">
-        </div>
+        </div> -->
         <hr>
-        <h1 class="lead">Michael Swanson</h1>
+        <h1 class="lead">Author: Michael Swanson</h1>
       </div>
 
       <div class="todo-list">
@@ -116,7 +116,9 @@
               <br/><input class="btn btn-primary btn-lg" type="submit" value="Log In"/>
           </div>
       </form>
-    <br/>
+      <br/>
+      <!-- <button type="submit" class="btn btn-primary btn-lg" ng-click="logOut()">Log Out</button> -->
+      
     <!-- <input class="btn btn-primary btn-lg" type="submit" value="FB Log in" ng-click="fBAuthenticate()"/> -->
     </div>
     <script src="http://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
