properly retrieving and deleting all messagers

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -69,7 +69,7 @@
 
       <div class="todo-list">
         <ul ng-repeat="message in messageData">
-          <li>{{ message.text }}&nbsp;&nbsp;&nbsp;<input type="checkbox" ng-click="deleteMessage(message.id)">Delete</li><hr></hr>
+          <li>{{ message.text}}&nbsp;&nbsp;&nbsp;<input type="checkbox" ng-click="deleteMessage(message.id)">Delete</li><hr></hr>
         </ul>
       </div>  
 
@@ -117,7 +117,7 @@
           </div>
       </form>
       <br/>
-      <!-- <button type="submit" class="btn btn-primary btn-lg" ng-click="logOut()">Log Out</button> -->
+      <button type="submit" class="btn btn-primary btn-lg" ng-click="logOut()">Log Out</button>
       
     <!-- <input class="btn btn-primary btn-lg" type="submit" value="FB Log in" ng-click="fBAuthenticate()"/> -->
     </div>
