--- a/client/views/index.html
+++ b/client/views/index.html
@@ -44,6 +44,11 @@
         width: 100%; 
         float: left;
       }
+      .messagesBox{
+        border: 1px solid black; margin: 5px;
+        height: 300px;
+        overflow: scroll;
+      }
       @media(max-width: 400px){
        .loginForm{
           width: 100%;
@@ -106,7 +111,7 @@
           <div class="chatTitle">
             {{returnOtherChatUsers(chat.id)}}
           </div>
-          <div style="border: 1px solid black; margin: 5px;">
+          <div class="messagesBox" style="">
             <ul ng-repeat="message in chat.messages" style="padding: 5px; 0 0 5px;">
               <li>{{ message.text }}</li>
             </ul>
@@ -167,5 +172,6 @@
     <script src="https://www.promisejs.org/polyfills/promise-done-7.0.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.12/angular.min.js"></script>
     <script src="javascripts/app.js"></script>
+    <script type="text/javascript" src="javascripts/indexScripts.js"></script>
   </body>
 </html>
