--- a/client/views/index.html
+++ b/client/views/index.html
@@ -190,6 +190,7 @@
     <script src="https://www.promisejs.org/polyfills/promise-done-7.0.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.12/angular.min.js"></script>
     <script src="javascripts/app.js"></script>
+    <script src="javascripts/services.js"></script>
     <script type="text/javascript" src="javascripts/indexScripts.js"></script>
   </body>
 </html>
