--- a/client/views/index.html
+++ b/client/views/index.html
@@ -135,9 +135,9 @@
             </ul>
           </div>
           <div class="message-form" style="margin: 5px;">
-            <form ng-submit="createMessage(chat.id)">
+            <form ng-submit="createMessage(chat.id, newMessageData[chat.id].text)">
               <div class="form-group">
-                <input type="text" name="messageFor{{chat.id}}" class="messageforChat{{chat.id}} form-control input-lg" placeholder="Send a message..." ng-model="formMessageData[chat.id].text">
+                <input type="text" name="messageFor{{chat.id}}" class="messageforChat{{chat.id}} form-control input-lg" placeholder="Send a message..." ng-model="newMessageData[chat.id].text">
               </div>
               <button class="message-send" type="submit" class="btn btn-primary btn-sm" style=""></button>
             </form>
@@ -187,6 +187,9 @@
     </div>
     <script src="http://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <script>
+      var socket = io();
+    </script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="https://www.promisejs.org/polyfills/promise-done-7.0.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.12/angular.min.js"></script>
