--- a/client/views/index.html
+++ b/client/views/index.html
@@ -129,7 +129,7 @@
             <!-- Returns both Users, Hides Current User -->
             <p>&nbsp;  <span ng-hide="user.username == chatUsers[chat.id][0].username"><strong>{{chatUsers[chat.id][0].username}}</strong></span><span ng-hide="user.username == chatUsers[chat.id][1].username"><strong>{{chatUsers[chat.id][1].username}}</strong></span></p>
           </div>
-          <div class="messagesBox" style="">
+          <div class="messagesBox" scroll-glue style="">
             <ul ng-repeat="message in chat.messages" style="padding: 5px; 0 0 5px;">
               <li>{{ message.text }}</li>
             </ul>
@@ -193,6 +193,7 @@
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="https://www.promisejs.org/polyfills/promise-done-7.0.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.12/angular.min.js"></script>
+    <script src="https://cdn.rawgit.com/Luegg/angularjs-scroll-glue/master/src/scrollglue.js"></script>
     <script src="javascripts/app.js"></script>
     <script type="text/javascript" src="javascripts/indexScripts.js"></script>
   </body>
