--- a/client/views/index.html
+++ b/client/views/index.html
@@ -4,6 +4,7 @@
     <title>ExpressChat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link rel="stylesheet" href="bower_components/angular-ui-tree/dist/angular-ui-tree.min.css">
     <style>
       body {
         padding: 50px;
@@ -18,12 +19,15 @@
         padding-left: 0px;
       }
       .container {
-        max-width: 1000px;
-        background-color: #eeeeee;
+        max-width: 800px;
+        /*background-color: #eeeeee;*/
         border: 1px solid black;
+        border-radius: 6px;
       }
       .header {
         text-align: center;
+        display: block;
+        /*content: "";*/
       }
       hr{
         color: black;
@@ -45,9 +49,16 @@
         width: 100%; 
         float: left;
       }
-      #chatCreateForm{
-        max-width: 400px; 
+      div#accordion{
+        background-color: rgba(111, 111, 111, .05);
+        border-radius: 6px;
         border: 1px solid black;
+      }
+      #chatCreateForm{
+        padding-top: 8px;
+        max-width: 800px; 
+        border: 1px solid black;
+        border-radius: 6px;
       }
       #chatCreateForm input{
         display: inline;
@@ -143,29 +154,53 @@
     <div class="container">
       
       <div class="header">
-        <h1>ExpressChat</h1>
-        </br>
-        <p style="font-size: 18px; text-align: right;" ng-show="user.status">{{user.username}} <button type="submit" class="btn btn-primary btn-sm" style="display: inline;" ng-click="logOut()">Log Out</button></p></br>
-        <div
+        <h1 style="text-align: left;">ExpressChat</h1>
+        <!-- </br> -->
+        <p style="font-size: 18px; width: 50%; float: left; text-align: left; display: inline;" ng-show="user.status"><button type="submit" class="btn btn-primary btn-sm" style="display: inline;" ng-click="logOut()">Log Out</button>&nbsp;&nbsp;{{user.username}}</p></br>
+        <!-- <div
           class="fb-like"
           data-share="true"
           data-width="450"
           data-show-faces="true"
           style="text-align: left; position: relative; width: 100%;">
-        </div>
-        <hr>
+        </div> -->
+        <!-- <hr> -->
       </div>
       </br>
       <form id="chatCreateForm" ng-show="user.status">
         &nbsp;
-        <p>&nbsp;Start a new chat</p>
-        <input type="text" class="form-control input-lg" placeholder="Enter Username..." ng-model="chatCreateData.username">
-        <button class="btn btn-primary btn-lg" ng-click="createChat()">New Chat</button>
+        <p style="display: inline;">&nbsp;Start a new chat</p>
+        <input type="text" class="form-control input-sm" placeholder="Enter Username..." ng-model="chatCreateData.username">
+        <button class="btn btn-primary btn-sm" ng-click="createChat()">New Chat</button>
         </br>&nbsp;
       </form>
       <div class="chat-wrap" ng-show="user.status" >
-        </br>&nbsp;
-        <div id="accordion" class="ul" ng-repeat="chat in chatsData" style="border: 1px solid black;" role="tablist" aria-multiselectable="true">
+        <div id="accordion" class="ul" ng-repeat="chat in chatsData" role="tablist" aria-multiselectable="true">
+          <div class="chatTitle">
+            <!-- Returns both Users, Hides Current User -->
+            <p>&nbsp;  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{chat.id}}" aria-expanded="true" aria-controls="collapse{{chat.id}}"><span ng-hide="user.username == chatUsers[chat.id][0].username"><strong>{{chatUsers[chat.id][0].username}}</strong></span><span ng-hide="user.username == chatUsers[chat.id][1].username"><strong>{{chatUsers[chat.id][1].username}}</strong></span></a><i ng-show="actions['typing'][chat.id]" style="font-size: 11px;">(typing)<span id="typing" ></span></i></p>
+          </div>
+          <div id="collapse{{chat.id}}" class="panel-collapse collapse collapse-wrap" role="tabpanel">
+            <div class="messagesBox" scroll-glue >
+              <div ng-class="isMe(message.user_id)" class="message ul" ng-repeat="message in chat.messages" >
+                <div class="li">{{ message.text }}<span ng-show="user.id == message.user_id" class="deleteBox">&nbsp;&nbsp;<input type="checkbox" ng-click="deleteMessage(message.id, chat.id)">&nbsp;Delete</span></div>
+              </div>            
+            </div>
+            <p class="deleteAlert" ng-show="alert.messageDelete">Message Deleted</p>
+            <div class="message-form" style="margin: 5px;">
+              <form ng-submit="createMessage(chat.id, newMessageData[chat.id].text)">
+                <div class="form-group">
+                  <input type="text" name="messageFor{{chat.id}}" class="messageforChat{{chat.id}} messageInput form-control input-lg" placeholder="Send a message..." ng-keypress="typing(chat.id)" ng-model="newMessageData[chat.id].text">
+                </div>
+                <button class="message-send" type="submit" class="btn btn-primary btn-sm" style=""></button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="chat-wrap" ng-show="user.status" >
+        <div id="accordion" class="ul" ng-repeat="chat in chatsData" role="tablist" aria-multiselectable="true">
           <div class="chatTitle">
             <!-- Returns both Users, Hides Current User -->
             <p>&nbsp;  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{chat.id}}" aria-expanded="true" aria-controls="collapse{{chat.id}}"><span ng-hide="user.username == chatUsers[chat.id][0].username"><strong>{{chatUsers[chat.id][0].username}}</strong></span><span ng-hide="user.username == chatUsers[chat.id][1].username"><strong>{{chatUsers[chat.id][1].username}}</strong></span></a><i ng-show="actions['typing'][chat.id]" style="font-size: 11px;">(typing)<span id="typing" ></span></i></p>
@@ -238,6 +273,7 @@
     <script src="https://www.promisejs.org/polyfills/promise-done-7.0.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.12/angular.min.js"></script>
     <script src="https://cdn.rawgit.com/Luegg/angularjs-scroll-glue/master/src/scrollglue.js"></script>
+    <script type="text/javascript" src="bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>
     <script src="javascripts/app.js"></script>
     <script type="text/javascript" src="javascripts/indexScripts.js"></script>
   </body>
