--- a/client/views/index.html
+++ b/client/views/index.html
@@ -4,7 +4,7 @@
     <title>ExpressChat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/JimLiu/angular-ui-tree/master/dist/angular-ui-tree.min.css">
+    <link rel="stylesheet" href="/bower_components/angular-ui-tree/dist/angular-ui-tree.min.css">
     <style>
       body {
         padding: 50px;
@@ -177,7 +177,6 @@
       <div class="chat-wrap" ng-show="user.status" >
         <div id="accordion" class="ul" ng-repeat="chat in chatsData" role="tablist" aria-multiselectable="true">
           <div class="chatTitle">
-            <!-- Returns both Users, Hides Current User -->
             <p>&nbsp;  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{chat.id}}" aria-expanded="true" aria-controls="collapse{{chat.id}}"><span ng-hide="user.username == chatUsers[chat.id][0].username"><strong>{{chatUsers[chat.id][0].username}}</strong></span><span ng-hide="user.username == chatUsers[chat.id][1].username"><strong>{{chatUsers[chat.id][1].username}}</strong></span></a><i ng-show="actions['typing'][chat.id]" style="font-size: 11px;">(typing)<span id="typing" ></span></i></p>
           </div>
           <div id="collapse{{chat.id}}" class="panel-collapse collapse collapse-wrap" role="tabpanel">
@@ -199,30 +198,31 @@
         </div>
       </div>
 
-      <div class="chat-wrap" ng-show="user.status" >
-        <div id="accordion" class="ul" ng-repeat="chat in chatsData" role="tablist" aria-multiselectable="true">
-          <div class="chatTitle">
-            <!-- Returns both Users, Hides Current User -->
-            <p>&nbsp;  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{chat.id}}" aria-expanded="true" aria-controls="collapse{{chat.id}}"><span ng-hide="user.username == chatUsers[chat.id][0].username"><strong>{{chatUsers[chat.id][0].username}}</strong></span><span ng-hide="user.username == chatUsers[chat.id][1].username"><strong>{{chatUsers[chat.id][1].username}}</strong></span></a><i ng-show="actions['typing'][chat.id]" style="font-size: 11px;">(typing)<span id="typing" ></span></i></p>
-          </div>
-          <div id="collapse{{chat.id}}" class="panel-collapse collapse collapse-wrap" role="tabpanel">
-            <div class="messagesBox" scroll-glue >
-              <div ng-class="isMe(message.user_id)" class="message ul" ng-repeat="message in chat.messages" >
-                <div class="li">{{ message.text }}<span ng-show="user.id == message.user_id" class="deleteBox">&nbsp;&nbsp;<input type="checkbox" ng-click="deleteMessage(message.id, chat.id)">&nbsp;Delete</span></div>
-              </div>            
+<!--       <div ui-tree class="chat-wrap" ng-show="user.status" >        
+        <div id="accordion" ui-tree-nodes="" ng-model="chatsData">
+          <div  class="ul" role="tablist" aria-multiselectable="true" ng-repeat="chat in chatsData" ui-tree-node>
+            <div ui-tree-handle class="ChatTitle">
+              <p>&nbsp;  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{chat.id}}" aria-expanded="true" aria-controls="collapse{{chat.id}}"><span ng-hide="user.username == chatUsers[chat.id][0].username"><strong>{{chatUsers[chat.id][0].username}}</strong></span><span ng-hide="user.username == chatUsers[chat.id][1].username"><strong>{{chatUsers[chat.id][1].username}}</strong></span></a><i ng-show="actions['typing'][chat.id]" style="font-size: 11px;">(typing)<span id="typing" ></span></i></p>
             </div>
-            <p class="deleteAlert" ng-show="alert.messageDelete">Message Deleted</p>
-            <div class="message-form" style="margin: 5px;">
-              <form ng-submit="createMessage(chat.id, newMessageData[chat.id].text)">
-                <div class="form-group">
-                  <input type="text" name="messageFor{{chat.id}}" class="messageforChat{{chat.id}} messageInput form-control input-lg" placeholder="Send a message..." ng-keypress="typing(chat.id)" ng-model="newMessageData[chat.id].text">
-                </div>
-                <button class="message-send" type="submit" class="btn btn-primary btn-sm" style=""></button>
-              </form>
+            <div id="collapse{{chat.id}}" class="panel-collapse collapse in collapse-wrap" role="tabpanel">
+              <div class="messagesBox" scroll-glue >
+                <div ng-class="isMe(message.user_id)" class="message ul" ng-repeat="message in chat.messages" >
+                  <div class="li">{{ message.text }}<span ng-show="user.id == message.user_id" class="deleteBox">&nbsp;&nbsp;<input type="checkbox" ng-click="deleteMessage(message.id, chat.id)">&nbsp;Delete</span></div>
+                </div>            
+              </div>
+              <p class="deleteAlert" ng-show="alert.messageDelete">Message Deleted</p>
+              <div class="message-form" style="margin: 5px;">
+                <form ng-submit="createMessage(chat.id, newMessageData[chat.id].text)">
+                  <div class="form-group">
+                    <input type="text" name="messageFor{{chat.id}}" class="messageforChat{{chat.id}} messageInput form-control input-lg" placeholder="Send a message..." ng-keypress="typing(chat.id)" ng-model="newMessageData[chat.id].text">
+                  </div>
+                  <button class="message-send" type="submit" class="btn btn-primary btn-sm" style=""></button>
+                </form>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div id="signup_form" ng-hide="user.status">
         <p>SIGN UP</p>
@@ -273,7 +273,7 @@
     <script src="https://www.promisejs.org/polyfills/promise-done-7.0.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.12/angular.min.js"></script>
     <script src="https://cdn.rawgit.com/Luegg/angularjs-scroll-glue/master/src/scrollglue.js"></script>
-    <script type="text/javascript" src="https://cdn.rawgit.com/JimLiu/angular-ui-tree/master/dist/angular-ui-tree.min.js"></script>
+    <script type="text/javascript" src="bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>
     <script src="javascripts/app.js"></script>
     <script type="text/javascript" src="javascripts/indexScripts.js"></script>
   </body>
