--- a/client/views/index.html
+++ b/client/views/index.html
@@ -53,7 +53,7 @@
           <div id="collapseUsers" class="panel-collapse collapse collapse-wrap">
             <div ng-repeat="user in users">
               <div class="user-wrap">
-                <li><i ng-class="active(user.status)" class="fa fa-circle"></i>{{user.username}} {{user.status}}</li>
+                <li><i ng-class="active(user.status)" class="fa fa-circle"></i> {{user.username}}</li>
               </div>
             </div>
           </div>
